# Spotify-autosaver

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  settings.example.json  users.example.json
.github/workflows/: ci.yml  docker-publish.yml  pages.yml  sync.yml
docs/: index.html
spotify_autosaver/: __init__.py  __main__.py  auth.py  autosaver.py  cli.py  config.py  settings.py  users.py
tests/: test_autosaver.py  test_settings.py  test_users.py
